# testrepo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  esp-tls.patch  gettingstarted.md  partition-table-enc.csv  partition-table-m5edukit.csv  platformio.ini  sdkconfig  sdkconfig-release  sdkconfig-vefuse  sdkconfig.defaults  sdkconfig.esp32-c3-ds-release  sdkconfig.esp32-c3-ds-vefuse  sdkconfig.esp32-s3-ds-release  sdkconfig.esp32-s3-ds-vefuse  sdkconfig.esp32m5stackEdukit-ecc608-debug  sdkconfig.m5edukit-ecc608-release  sdkconfig.m5edukit-ecc608-vefuse  sdkconfig.old
components/esp-cryptoauthlib/: README.md
config-files/partition-tables/: partition-table-esp32-c3-sb-fe-vefuse.csv  partition-table-esp32-c3-sb-fe.csv  partition-table-esp32-s3-sb-fe-vefuse.csv  partition-table-esp32-s3-sb-fe.csv
include/: quarklink.h  quarklink_extras.h
lib/: README.md
main/: CMakeLists.txt  main.c
partition-tables/: partition-table-m5edukit-sb-fe-vefuse.csv  partition-table-m5edukit-sb-fe.csv
patches/: apply_patch.py  ota_ds_peripheral.patch
src/: main.c
